🔧 Fixed Blog style by removing gap

--- a/styles/Blog.module.scss
+++ b/styles/Blog.module.scss
@@ -7,7 +7,6 @@
     margin-bottom: 5rem;
     @include flex-center(center, center);
     flex-direction: column;
-    gap: 2rem;
   }
 }
 .main-image-container {
@@ -24,6 +23,7 @@
   position: relative;
   max-width: 70%;
   transition: transform 0.2s ease;
+  margin: 1rem 0;
   & > div {
     position: absolute;
     right: -10px;
@@ -39,7 +39,6 @@
     position: relative;
     @include flex-center(center, center);
     align-items: center;
-    gap: 1.5rem;
     border: 4px solid var(--dark-letter);
     border-radius: 0.5rem;
     background-color: var(--dark-background);
@@ -48,6 +47,7 @@
     
     div:first-child {
       justify-self: flex-end;
+      margin-right: 1.5rem;
     }
     ul {
       @include flex-center(center, center);
